S13nServiceWorker: Fix a leak in subresource loader when aborting

Currently a subresource loader could be leaked if a fetch event is aborted
because it invalidated the weak pointers to it and it results invalidating the
error callback. This patch is fixing it by removing invalidation and binding the
error callback with base::Unretained().

Bug: 778148
Change-Id: I6c6288922203f3d0b2f2379309c540540b0f0ca4
Reviewed-on: https://chromium-review.googlesource.com/737949
Reviewed-by: Kinuko Yasuda <kinuko@chromium.org>
Commit-Queue: Makoto Shimazu <shimazu@chromium.org>
Cr-Commit-Position: refs/heads/master@{#511684}
Former-commit-id: f4051b64f4e700bc168ff667d112d5c87fa6d37b